--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.1",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
