--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,26 +1,12 @@
 security:
-    encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
-
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
-#    providers:
-#        in_memory: { memory: ~ }
+        in_memory: { memory: ~ }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             pattern: ^/
-#            user_checker: fos_user.user_checker
-            form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
 
             logout:       true
             anonymous: true
