google oauth, upload start

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    my_user_provider.class: App\Security\FOSUBUserProvider
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +30,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    my_user_provider:
+        class: "%my_user_provider.class%"
+        arguments: ['@fos_user.user_manager',{google: googleId}]
