--- a/.env.dist
+++ b/.env.dist
@@ -23,3 +23,8 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 MAILER_URL=null://localhost
 MAILER_USER=nenad@heklanje.rs
 ###< symfony/swiftmailer-bundle ###
+
+###> hwi/oauth-bundle ###
+FB_ID=
+FB_SECRET=
+###< hwi/oauth-bundle ###
