--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "~2.0",
+        "hwi/oauth-bundle": "^0.6.3",
+        "knplabs/knp-gaufrette-bundle": "~0.5",
         "knplabs/knp-paginator-bundle": "^2.8",
+        "liip/imagine-bundle": "^2.1",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/httplug-bundle": "^1.11",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "*",
         "symfony/console": "*",
@@ -27,7 +32,8 @@
         "symfony/web-link": "*",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "*",
-        "twbs/bootstrap": "4.1.3"
+        "twbs/bootstrap": "4.1.3",
+        "vich/uploader-bundle": "^1.8"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^4.1",
